refactor: поменял семантику кода, сделал покороче и убрал лишние пробелы